--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,13 @@ html{
 
 body{
   font-family: Helvetica ,Arial, sans-serif;
-  font-size: 1.6rem;
+  font-size: $m-size;
+  background: $dark-blue;
 }
 
+button{
+  cursor: pointer;
+}
+button:disabled{
+  cursor: default;
+}
