--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,21 +1,29 @@
 
 .header{
-  background: #20222b;
-  margin-bottom: 4.8rem;
-  padding: 1.6rem 0;
+  background: $off-black;
+  //margin-bottom: $xl-size;
+  margin-bottom: $m-size;
+  padding: $m-size 0;
   color: white;
 
 }
 
 //BEM naming  block element modifier
 .header__title{
-font-size: 3.2rem;
+font-size: $l-size;
 margin: 0;
 }
 
 .header__subtitle{
-  color:#a5afd7;
-  font-size: 1.6rem;
+  color:off-white;
+  font-size: $m-size;
   font-weight: 500;
   margin:0;
+}
+
+@media (min-width: $desktop-breakpoint){
+  .header{
+    margin-bottom: $xl-size;
+  }
+
 }
